protfilio_gitops/cowsay/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cowsay-secure-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - yuvalm-dc.ddns.net
      secretName: cowsay-tls
  rules:
    - host: yuvalm-dc.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cowsay
                port:
                  number: 80
